<resources>
    <string name="app_name">eKuku App Tz </string>
    <string name="intro">eKuku ni mfumo wa kisasa kabisa
    unaowakutanisha wauzaji na wanunuzi wa kuku na mazao yake kwa wakati mmoja kupitia simu ya mkononi popote ulipo
    nchini Tanzania. Tumia nambari yako ya simu kujiunga. </string>
    <string name="select_item">Chagua Bidhaa</string>
    <string name="select_street">Chagua Mtaa ulipo</string>
    <string name="select_ward">Chagua Kata ulipo</string>
    <string name="phone">Nambari ya Simu:</string>
    <string name="phone_number">Nambari ya Simu (anza na 0…)</string>
    <string name="quantity">Kiasi au idadi</string>
    <string name="price">Bei - kila moja (TShs):</string>
    <string name="date_of">Takwimu za Tarehe:</string>
    <string name="stats">Takwimu za Masoko</string>
    <string name="fandn">Vyakula na Lishe </string>
    <string name="infrast">Miundombinu ya Ufugaji:</string>
    <string name="innews">Katika Habari</string>
    <string name="register">Sajili </string>
    <string name="price_format">$%1$s</string>
    <string name="send">Tuma</string>
    <string name="emailaddress">sixbert.mourice@gmail.com</string>
    <string name="verify">Thibitisha</string>
    <string name="t_and_c">Kubali Vigezo na Masharti</string>
    <string name="town"> Mji/Wilaya:</string>
    <string name="token_otp">Ingiza PIN</string>
    <string name="feedback">Mrejesho</string>
    <string name="follow">Tufuatilie katika channel zetu kwa taarifa, video na picha zaidi </string>
    <string name="support">Sisi Ni Nani</string>
    <string name="f_s">Mrejesho na Msaada</string>
    <string name="communicate">Wasiliana nasi</string>
    <string name="nav_open">https://ekuku.co.tz</string>
    <string name="nav_close">https://ekuku.co.tz</string>
    <string name="sell">Bandika</string>
    <string name="sevendayspast">Wiki iliyopita (Hadi Jana)</string>
    <string name="fab">Content Description</string>
    <string name="search_title">Peruzi</string>
    <string name="filter">Peruzi</string>
    <string name="street">Mtaa:</string>
    <string name="localchicken"> Kuku Kienyeji</string>
    <string name="broilerchicken">Kuku Kisasa</string>
    <string name="hybridchicken">Kuku Chotara</string>
    <string name="egglocal_s">Mayai Kienyeji (Trei) </string>
    <string name="egglayers_s">Mayai Kisasa (Trei) </string>
    <string name="egghybrid_s">Mayai Chotara (Trei) </string>
    <string name="egglocal">Mayai Kienyeji</string>
    <string name="egglayers">Mayai Kisasa</string>
    <string name="egghybrid">Mayai Chotara </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="kiasi">Kiasi:</string>
    <string name="general">Takwimu na Masoko</string>
    <string name="farstructures">Miundombinu ya Ufugaji</string>
    <string name="view">Angalia</string>
    <string name="edit">Hariri</string>
    <string name="update">Badilisha</string>
    <string name="diseases">Magonjwa ya Kuku</string>
    <string name="feed_nutrition">Vyakula vya Kuku na Lishe</string>
    <string name="delete">Futa</string>
    <string name="postnews">Jukwaani</string>
    <string name="news_media"> Kuku Katika Habari</string>
    <string name="nunua">Nunua</string>
    <string name="uza">Uza</string>
    <string name="extraDescription">Maelezo ziada: </string>
    <string name="mwanzo">Mwanzo</string>
    <string name="elimika">Elimika</string>
    <string name="type">Bidhaa: </string>
    <string name="today">Sokoni Leo</string>
    <string name="ward">Kata:</string>
    <string name="date">Tarehe ya leo</string>
    <string name="buytabs">Buytabs</string>
    <string name="nope">Hapana</string>
    <string name="yeah">Ndiyo</string>
    <string name="great_market">Soko|Kuu|Kidigitali</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Tafuta katika Mji/Wilaya</string>
    <string name="subject">kichwa cha habari</string>
    <string name="emailBody">Barua Pepe</string>
    <string name="sendmail">Tuma Barua Pepe</string>
    <string name="writemessage">Andika wazo lako\n (Kikomo ni herufi 200)</string>
    <string name="select_town">Chagua Mji au Wilaya</string>
    <string name="select_district">Chagua Mji/Wilaya</string>
    <string name="button">likeButton</string>
    <string name="likescounter">likescounter</string>
    <string name="likesCounter">Like Counter</string>
    <string name="commentCcounter">Comment counter</string>
    <string name="main_activity_title">activity title</string>
    <string name="main_activity_desc">activity descr\n</string>
    <string name="main_activity_about">about</string>
    <string name="english">English</string>
    <string name="kiswahili">Kiswahili</string>
    <string name="settings">Mipangilio</string>
    <string name="incubators">Vitotoa</string>
    <string name="sheds">Mabanda</string>
    <string name="feeders_drinkers">Vifaa vya Chakula na Maji</string>
    <string name="cages">Vizimba</string>
    <string name="others">Mengineyo</string>

    <string name="gumboro">Gumboro</string>
    <string name="new_castle">Mdondo</string>
    <string name="fowltyphoid">Kideri</string>
    <string name="coryza">Mafua</string>
    <string name="layersChicken">Kuku wa Mayai</string>
    <string name="close">Kufunga eKuku</string>
    <string name="close_popup">Funga</string>
    <string name="closemessage">Hakika unataka kufunga eKuku?</string>
    <string name="copy_right">Haki zote zimehifadhiwa (eKukuStack 2023)</string>
    <string name="todo">TODO</string>
    <string name="terms">Sera ya Faragha</string>
    <string name="select_image">Chagua Picha </string>
    <string name="upload">Bandika Picha</string>
    <string name="string_guide_add_photo">Hii ni sehemu ya kuweka Picha ya bidhaa na Taarifa za muuzaji.\n Hatua ya 1: Chagua kutoka katika simu yako, picha ya bidhaa husika, kisha bonyeza "Bandika picha". \n Hatua ya 2: Weka taarifa za mahali ulipo na za bidhaa halisi, kisha bonyeza "Bandika".</string>
    <string name="loading">Inapakia…</string>
    <string name="enter_pin">ingiza PIN</string>
    <string name="accept_tc">Kubali Sera ya Faragha</string>
    <string name="fill_phone_number">Jaza nambari ya Simu</string>
    <string name="fill_user_name">Andika majina yako mawili </string>
    <string name="verify_phone_number">Uhakiki wa Taarifa</string>
    <string name="month_past">Mwezi uliopita</string>
    <string name="todate">Takwimu za Leo</string>
    <string name="this_day_yr_past">Tarehe Kama ya leo Mwaka uliopita</string>
    <string name="buy">Nunua</string>
    <string name="local_chicken_plot_prices">Bei za Kuku Kienyeji</string>
    <string name="to">Kwenda kwa:</string>
    <string name="subject_hint">Somo:</string>
    <string name="mail_hint">Barua pepe: </string>
    <string name="talk_to_us">Wasiliana nasi</string>
    <string name="farmerroom">Wafugaji Kuku</string>
    <string name="servicesrooms">Huduma</string>
    <string name="equipmentrooms">Vifaa</string>
    <string name="healthrooms">Magonjwa</string>
    <string name="chatrooms">Vyumba Sogozi</string>
    <string name="chatTabs">vitufevyaSoga</string>
    <string name="comment_text">Maoni</string>
    <string name="liked">Ilipendwa</string>
    <string name="like">Penda</string>
    <string name="likes">Likes</string>
    <string name="comments">Maoni</string>
    <string name="blogs">Jukwaa la eKuku</string>
    <string name="string_guide_add_post">Hili ni Jukwaa la watumiaji makini. \n Andika chochote unachopenda kuwashirikisha wadau wa eKuku. \nONYO: Vigezo na masharti kuzingatiwa</string>
    <string name="max_chars">" Hadi herufi 200"</string>
    <string name="upload_image">pandisha</string>
    <string name="photo_gallery">picha</string>
    <string name="camera">kamera</string>
    <string name="uid">Tel_number</string>
    <string name="timestamp">Time</string>
    <string name="actual_post">Post</string>
    <string name="likesly">33k</string>
    <string name="likedby">Waliopendezwa</string>
    <string name="update_profile">Boresha wasifu</string>
    <string name="blog_rules">Kanuni za Jukwaa</string>
    <string name="blog_guide">Masharti Mahsusi ya Jukwaa la eKuku\n\n1. Jukwaa hili lisitumike kamwe kutangaza\n\t    biashara ya aina yoyote\n\n2. Lugha zisizo za staha na zisizo na hadhi \n\t   ya eKuku haziruhusiwi kamwe\n\n3. Hairuhusiwi kutaja kwa majina mtu binafsi, \n\t   taasisi au kundi lolote\n\n4. Kiswahili ndiyo lugha rasmi itakayotumika \n\t   kuweka mabandiko\n\n5. Picha zenye maudhui yafuatayo haziruhusiwi \n\t  kamwe:\n\t  -  Ngono\n\t  -  Mauaji\n\t  -  Ukatili wa aina yoyote ile (dhidi ya wanyama, \n\t      binadam au mazingira)\n\n6. Jukwaa hili halitatumika kufanikisha malengo \n\t   ya kisiasa, kidini, michezo, kamali, jinai \n\t au  malengo yoyote yasiyohusu mnyororo \n\t   wa thamani wa kuku\n \n7. Maelezo, maoni au hisia  katika jukwaa hili\n ni ya binafsi na kamwe siyo msimamo \n wa eKuku </string>
    <string name="update_name">Ongeza jina</string>
    <string name="update_profile_picture">Weka Picha</string>
    <string name="update_profile_pic">Tafuta Picha</string>
    <string name="edit_profile_data">Badilisha Picha</string>
    <string name="upload_profile_pic">Pandisha picha</string>
    <string name="update_username">Ongeza Jina</string>
    <string name="click_here">Badili Jina</string>
    <string name="click">Bonyeza Hapa</string>
    <string name="share">Sambaza</string>
    <string name="enter_comment">Komenti… herufi 140max</string>
    <string name="likees"> Likes %1$s </string>
    <string name="commcountes"> Comments %1$s </string>
    <string name="more">Zaidi</string>
    <string name="whoarewe">Sisi ni kina Nani?</string>
    <string name="photo">Picha</string>


    <!--string name="language">Badilisha lugha</string>-->

    <string-array name="item_list">
        <item>Kuku Kienyeji</item>
        <item>Kuku Kisasa</item>
        <item>Kuku Chotara</item>
        <item>Mayai Kienyeji (Trei)</item>
        <item>Mayai Kisasa (Trei)</item>
        <item>Mayai Chotara (Trei)</item>
    </string-array>


</resources>