<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_color_selector"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <CheckBox
        android:id="@+id/chkBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/t_and_c"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btngetOTP"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/Orange"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/tvTC"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/terms"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
