<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/drawer_layout"
    tools:context=".SellActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background ="@color/colorAccent">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:title="@string/edit"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/ToolBar"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="5dp" />

            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:id="@+id/spinnerLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/districtSpinnerLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/select_district"
                    app:boxBackgroundColor="#fff"
                    app:boxStrokeColor="#f00"
                    app:boxStrokeWidth="2dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/districtTextView"
                        style="@style/TextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:textColor="#f00"
                        android:textSize="16sp"
                        tools:ignore="KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wardSpinnerLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/select_ward"
                    app:boxBackgroundColor="#fff"
                    app:boxStrokeColor="#f00"
                    app:boxStrokeWidth="2dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/wardTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:textColor="#f00"
                        android:textSize="16sp"
                        tools:ignore="KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/streetSpinnerLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/select_street"
                    app:boxBackgroundColor="#fff"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxStrokeColor="#f00"
                    app:boxStrokeWidth="2dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/streetTextView"
                        style="@style/TextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="#f00"
                        android:textSize="16sp"
                        tools:ignore="KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customerSpinnerLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/select_item"
                    app:boxBackgroundColor="#fff"
                    app:boxStrokeColor="#f00"
                    app:boxStrokeWidth="2dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/productTextView"
                        style="@style/TextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:textColor="#f00"
                        android:textSize="16sp"
                        tools:ignore="KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">


                <EditText
                    android:id="@+id/edtxtnumber_of_chicken"
                    style="@style/TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/quantity"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/edtxtPrice"
                    style="@style/TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="number" />
                <EditText
                    android:id="@+id/xtraDescription"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:autofillHints="text"
                    android:ems="10"
                    android:hint="@string/extraDescription"
                    android:inputType="textCapSentences|textMultiLine" />

            </LinearLayout>

            <Button
                android:id="@+id/btnUpdate"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="#fa8d22"
                android:elevation="2dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemHorizontalTranslationEnabled="true"
                app:itemIconTint="@color/AppBar"
                app:itemTextColor="@color/textColorPrimary"
                app:itemIconSize="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_navigation_menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.drawerlayout.widget.DrawerLayout>